--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <body>
     
     <h1>Web 2 Starter</h1>
+    <img src="http://vignette2.wikia.nocookie.net/lotrminecraftmod/images/8/8e/Keep-calm-and-be-illuminati-8.png" alt="" style="display:none" />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LRWAFQqQY9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>See the console for a secrect message.</p>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
